--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+h1{
+  font-family:  'Slabo 27px', serif;
+  font-size: calc(1rem + 3.5vw);
+}
+h2{
+  font-family:  'Slabo 27px', serif;
+  font-size: calc(1rem + 2vw);
+}
+h3{
+font-family:  'Slabo 27px', serif;
+font-size: calc(1rem + 1.5vw);
+}
+p{
+
+}
